--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 android {
     namespace 'com.example.sp23_pro1121_cp18103_group4'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.sp23_pro1121_cp18103_group4"
@@ -36,4 +36,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //view quang cao
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    //gif splash
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.25'
 }
