--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,7 @@ dependencies {
 
     //gif splash
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.25'
+
+    //
+    implementation 'com.google.android.material:material:1.1.0'
 }
