--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,7 +16,9 @@
         android:theme="@style/Theme.SP23_PRO1121_CP18103_GROUP4"
         tools:targetApi="31">
         <activity
-
+            android:name=".Dialog_MonTrongBan"
+            android:exported="false" />
+        <activity
             android:name=".SplashScreenView"
             android:exported="false">
             <meta-data
@@ -27,9 +31,8 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity>
-<!--            android:name=".DoiMatKhau"-->
-<!--            android:exported="false" />-->
+        </activity> <!-- android:name=".DoiMatKhau" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name=".Account"
             android:exported="false" />
@@ -39,7 +42,9 @@
         <activity
             android:name=".Activity.Login"
             android:exported="false" />
-
+        <activity
+            android:name=".Activity.Dialog_MonTrongBan"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
