--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,7 @@
         </activity>
         <activity
             android:name=".MonActivity"
-            android:exported="false"
-            android:theme="@style/Dialog">
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
