--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.SP23_PRO1121_CP18103_GROUP4"
         tools:targetApi="31">
         <activity
-            android:name=".Dialog_MonTrongBan"
+            android:name=".Activity.Dialog_MonTrongBan"
             android:exported="false" />
         <activity
             android:name=".SplashScreenView"
