--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,18 +41,22 @@
             android:exported="false" />
         <activity
             android:name=".Activity.Login"
-            android:exported="false" />
-        <activity
-            android:name=".Activity.Dialog_MonTrongBan"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+
+        <activity
+            android:name=".Activity.Dialog_MonTrongBan"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false">
+
 
             <meta-data
                 android:name="android.app.lib_name"
