--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,15 +16,15 @@
         android:theme="@style/Theme.SP23_PRO1121_CP18103_GROUP4"
         tools:targetApi="31">
         <activity
-            android:name=".Activity.Dialog_MonTrongBan"
-            android:exported="false" />
-        <activity
-            android:name=".Activity.Login"
+            android:name=".SplashScreenView"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity
+            android:name=".Activity.Dialog_MonTrongBan"
+            android:exported="false" />
         <activity
             android:name=".MonActivity"
             android:exported="false">
@@ -33,7 +33,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".SplashScreenView"
+            android:name=".Activity.Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,12 +41,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivity"
             android:exported="false">
-
-
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Activity.RegisterActivity"
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
